fix land video on safari (in progress)

--- a/src/scss/sections/home-record.scss
+++ b/src/scss/sections/home-record.scss
@@ -33,7 +33,7 @@
   letter-spacing: .03em;
   font-size: 1.5rem;
   font-weight: normal;
-  line-height: normal;
+  line-height: 1.5;
   text-align: center;
   color: #D6D0E0;
 }
@@ -159,8 +159,8 @@
     position: absolute;
     top: -1%;
     bottom: auto;
-    left: 0%;
-    right: 0%;
+    left: 0;
+    right: 0;
   }
 
   &_video-wrap {
@@ -273,7 +273,6 @@
   }
 
   .section-description {
-    text-align: left;
     font-size: 1.25rem;
   }
 
